# medpass

./: .gitignore  Makefile  README.md  database.sql  docker-compose.llm.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  package.json  prod.sh  setup_backend.sh  setup_ssl.sh  start.sh  startmedpass.sh
backend/: .dockerignore  Dockerfile  alembic.ini  key.py  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 00a8a060586a_initial_migration.py
backend/app/: gemini_test.py  main.py  output_response.json
backend/app/api/: deps.py
backend/app/core/: auth.py  base.py  config.py  database.py  init_db.py  rag.py  security.py
backend/app/models/: __init__.py  calendar_models.py  chat_models.py  class_models.py  classfacultymodels.py  exam_models.py  examquestionmodels.py  misc_models.py  pydanticclassfaculty.py  pydanticexamquestion.py  pydanticstudentinformation.py  result_models.py  student.py  studentinformationmodels.py  studenttemp.py  user.py  user_models.py
backend/app/pdfs/: initial_prompt.txt  system_prompt.txt
backend/app/schemas/: calendar.py  chat_schemas.py  database.sql  pydanticclassfaculty.py  pydanticexamquestion.py  pydanticstudentinformation.py  question.py  rag_schema.py  reportschema.py  settings.py  student.py  token.py  user.py  wrisks.py
backend/app/scripts/: block_ingest.py  chat_ingest.py  database.sql  drop.sql  id_ingest.py  init_db.py  list.py  manage_table.py  question_ingest.py  (+4 more)
backend/scripts/: init_db.py
(+233 files in other folders)
