[metadata]
name = medpass
version = 1.0.0
description = MEDPASS Application
author = MEDPASS Team

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    sqlalchemy
    pydantic
    pydantic-settings
    uvicorn
    psycopg2-binary
    pytest

[options.packages.find]
exclude =
    tests*